# TutorialMaker

./: .gitignore  CMakeLists.txt  Collaboration.md  Contributions.md  EducationalMaterials.md  Index.md  LICENSE.txt  ProfessionalEvents.md  README.md  README_esp.md  README_pt-br.md  TutorialMakerTool.md  _config.yml  utils.py
DOCS/: EssentialsOverview.pptx
PDF_creator/: custom_style.css  package-lock.json  package.json  user_generates_this_file_from_the_tool.json
Tutorial/: Tutorial.py  gui_test.py
TutorialMaker/: CMakeLists.txt  TutorialMaker.py
TutorialMaker/Lib/: Anotations.py  CreateTutorial.py  FileMDHTML.py  GitTools.py  TutorialEditor.py  TutorialGUI.py  painter.py  tmLabel.py  utils.py
TutorialMaker/Lib/standalone/: metadata_gui.py  metadata_openjson.py
TutorialMaker/Lib/standalone/Editor/: gui_test.py
TutorialMaker/Lib/standalone/PDF_creator/: convertToPDF.js  demo_june.py  package-lock.json
TutorialMaker/Resources/UI/: CreateNewTutorial.ui  ScreenshotAnnotator.ui  TutorialEditor.ui  TutorialMaker.ui  WidgetAnnotator.ui
TutorialMaker/Testing/: 4min_tutorial.py  fourMin_tutorial.py  new_tutorial_test.py  prueba_uno.py  visualization_tutorial.py  welcome_tutorial.py
